--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="main.js"></script>
     </head>
 
     <body>
         <center>
         <h1>Game</h1>
-        <div class="col-lg-7 col-sm-7 col-xs-11">
+        <div class="col-lg-6">
             <h3>Player 1 Login</h3>
             <label>User Name:</label>
             <input placeholder="Player 1 Name" type="text" id="Player 1 Name" class="form-control">
             <br>
         </div>
-        <br><br>
-        <div class="col-lg-7 col-sm-7 col-xs-11">
+        <div class="col-lg-6">
             <h3>Player 2 Login</h3>
             <label>User Name:</label>
             <input placeholder="Player 2 Name" type="text" id="Player 2 Name" class="form-control">
             <br>
         </div>
+        <br>
+        <button class="btn btn-info" style="width: 20%;">Login</button>
         </center>
-        <br><br>
-        <button class="btn btn-succes" style="width: 10%;">Login</button>
     </body>
 </html>
